[gd_scene load_steps=7 format=3 uid="uid://mg04jc2htfpv"]

[ext_resource type="Script" uid="uid://dhh4lev0r5d5b" path="res://levels/main_level.gd" id="1_ilwad"]
[ext_resource type="PackedScene" uid="uid://ct53aorxa5oa0" path="res://entities/tank_base.tscn" id="2_0vhbo"]
[ext_resource type="Texture2D" uid="uid://b3a4b0sxfbxxw" path="res://icon.svg" id="3_ldao0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0vhbo"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_55n5f"]
albedo_texture = ExtResource("3_ldao0")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_wg11f"]
material = SubResource("StandardMaterial3D_55n5f")
size = Vector3(50, 1, 50)

[node name="MainLevel" type="Node3D"]
script = ExtResource("1_ilwad")
player_scene = ExtResource("2_0vhbo")

[node name="Floor" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_0vhbo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_wg11f")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://ct53aorxa5oa0", "uid://bdyepfu7q3ljw", "uid://b4ayhjqobyhe4", "uid://nkhg3kfddtlm")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VFlowContainer" type="HFlowContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -53.5
offset_right = 32.0
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2

[node name="Join" type="Button" parent="CanvasLayer/VFlowContainer"]
layout_mode = 2
text = "JOIN"

[node name="Host" type="Button" parent="CanvasLayer/VFlowContainer"]
layout_mode = 2
text = "HOST"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.70710677, 0.70710677, 0, -0.70710677, -0.70710677, 0, 34, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 39)

[node name="SpawnPoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 2, -11)

[node name="Point 1" type="Marker3D" parent="SpawnPoints" groups=["SpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -5)

[node name="Point 2" type="Marker3D" parent="SpawnPoints" groups=["SpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -9)

[node name="Point 3" type="Marker3D" parent="SpawnPoints" groups=["SpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9)

[node name="Point 4" type="Marker3D" parent="SpawnPoints" groups=["SpawnPoint"]]

[connection signal="pressed" from="CanvasLayer/VFlowContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/VFlowContainer/Host" to="." method="_on_host_pressed"]
